solved the issue related to the menu icon in the mobile screen

--- a/aws-solution-architect.html
+++ b/aws-solution-architect.html
@@ -148,131 +148,143 @@
     </header><!-- End Header -->
 
     <main id="main">
-        <div class="container" style="margin-top: 120px;">
-            <div class="row align-items-center mb-4">
-                <div class="col-lg-6">
-                    <h1 class="animate__animated animate__fadeInLeft"
-                        style="margin-bottom: 20px; color: #007bff; font-weight: 800;">
-                        Navigating the Cloud?</h1>
-                    <h2 class="animate__animated animate__fadeInLeft"
-                        style="margin-bottom: 20px; color: #007bff; font-weight: 700;">Our
-                        AWS Experts Are Your Compass.</h2>
-                    <div class="content animate__animated animate__fadeInLeft">
-                        <p class="about-text">Our AWS experts are excels in architecting robust, tailored solutions to
-                            meet
-                            your unique needs.
-                            With deep expertise in AWS services such as EC2,&nbsp; Lambda, S3, they craft
-                            comprehensive architectures to empower your business in the cloud.</p>
+        <section id="aws-solution-architect">
+            <div class="container" style="margin-top: 120px;">
+                <div class="row align-items-center mb-4">
+                    <div class="col-lg-6">
+                        <h1 class="animate__animated animate__fadeInLeft"
+                            style="margin-bottom: 20px; color: #007bff; font-weight: 800;">
+                            Navigating the Cloud?</h1>
+                        <h2 class="animate__animated animate__fadeInLeft"
+                            style="margin-bottom: 20px; color: #007bff; font-weight: 700;">Our
+                            AWS Experts Are Your Compass.</h2>
+                        <div class="content animate__animated animate__fadeInLeft">
+                            <p class="about-text">Our AWS experts are excels in architecting robust, tailored solutions
+                                to
+                                meet
+                                your unique needs.
+                                With deep expertise in AWS services such as EC2,&nbsp; Lambda, S3, they craft
+                                comprehensive architectures to empower your business in the cloud.</p>
 
-                        <p class="about-text">Trusted for data management, they safeguard and optimize your digital
-                            assets. Our team ensures your cloud infrastructure remains resilient, scalable and
-                            optimized for peak performance, allowing you to drive innovation and growth.</p>
+                            <p class="about-text">Trusted for data management, they safeguard and optimize your digital
+                                assets. Our team ensures your cloud infrastructure remains resilient, scalable and
+                                optimized for peak performance, allowing you to drive innovation and growth.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="animate__animated animate__fadeInRight">
+                            <img src="assets/img/aws_solution_architects/cloud_computing.jpg" alt="Cloud Computing"
+                                style="width: 100%; height: auto; object-fit: cover; border-radius: 8px;">
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="animate__animated animate__fadeInRight">
-                        <img src="assets/img/aws_solution_architects/cloud_computing.jpg" alt="Cloud Computing"
-                            style="width: 100%; height: auto; object-fit: cover; border-radius: 8px;">
-                    </div>
-                </div>
-            </div>
 
-            <div class="row equal-margin">
-                <!-- Card 1:Cloud Migration-->
-                <div class="col-md-4 mb-4 d-flex">
-                    <div class="rectangle animate__animated animate__fadeInLeft">
-                        <div class="rectangle-top"></div>
-                        <img src="assets/img/aws_solution_architects/cloud_migration.jpg" alt="Cloud Migration"
-                            class="rectangle-image" style="height: 150px">
-                        <h5 class="rectangle-title" style="margin-bottom: 45px;">Cloud Migration</h5>
-                        <ul style="padding-left: 20px;" class="about-text">
-                            <li style="margin-bottom: 10px;"><b>Assessment and Planning</b>: Evaluate your existing
-                                infrastructure and develop a migration strategy.</li>
-                            <li style="margin-bottom: 10px;"><b>Seamless Migration</b>: Execute smooth and secure
-                                migration of applications, data, and workloads.</li>
-                            <li style="margin-bottom: 10px;"><b>Post-Migration Support</b>: Provide ongoing support and
-                                optimization after migration.</li>
-                        </ul>
+                <div class="row equal-margin">
+                    <!-- Card 1:Cloud Migration-->
+                    <div class="col-md-4 mb-4 d-flex">
+                        <div class="rectangle animate__animated animate__fadeInLeft">
+                            <div class="rectangle-top"></div>
+                            <img src="assets/img/aws_solution_architects/cloud_migration.jpg" alt="Cloud Migration"
+                                class="rectangle-image" style="height: 150px">
+                            <h5 class="rectangle-title" style="margin-bottom: 45px;">Cloud Migration</h5>
+                            <ul style="padding-left: 20px;" class="about-text">
+                                <li style="margin-bottom: 10px;"><b>Assessment and Planning</b>: Evaluate your existing
+                                    infrastructure and develop a migration strategy.</li>
+                                <li style="margin-bottom: 10px;"><b>Seamless Migration</b>: Execute smooth and secure
+                                    migration of applications, data, and workloads.</li>
+                                <li style="margin-bottom: 10px;"><b>Post-Migration Support</b>: Provide ongoing support
+                                    and
+                                    optimization after migration.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- Card 2: Infrastructure Design and Implementation -->
+                    <div class="col-md-4 mb-4 d-flex">
+                        <div class="rectangle animate__animated animate__fadeInLeft">
+                            <div class="rectangle-top"></div>
+                            <img src="assets/img/aws_solution_architects/infrastructure_design.jpg"
+                                alt="Infrastructure Design and Implementation" class="rectangle-image"
+                                style="height: 150px">
+                            <h5 class="rectangle-title">Infrastructure Design and Implementation</h5>
+                            <ul style="padding-left: 20px;" class="about-text">
+                                <li style="margin-bottom: 10px;"><b>Architecture Design</b>: Create robust, scalable,
+                                    and
+                                    secure AWS architectures tailored to your needs.</li>
+                                <li style="margin-bottom: 10px;"><b>Implementation</b>: Deploy and configure AWS
+                                    services
+                                    for a reliable cloud infrastructure.</li>
+                                <li style="margin-bottom: 10px;"><b>Infrastructure as Code (IaC)</b>: Automate
+                                    infrastructure deployment with AWS CloudFormation and Terraform.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- Card 3: DevOps on AWS -->
+                    <div class="col-md-4 mb-4 d-flex">
+                        <div class="rectangle animate__animated animate__fadeInRight">
+                            <div class="rectangle-top"></div>
+                            <img src="assets/img/aws_solution_architects/aws.jpg" alt="DevSecOps on AWS"
+                                class="rectangle-image" style="height: 150px">
+                            <h5 class="rectangle-title" style="margin-bottom: 45px;">DevSecOps on AWS</h5>
+                            <ul style="padding-left: 20px;" class="about-text">
+                                <li style="margin-bottom: 10px;"><b>CI/CD Pipelines</b>: Set up secure continuous
+                                    integration and
+                                    deployment pipelines with AWS CodePipeline.</li>
+                                <li style="margin-bottom: 10px;"><b>Automation</b>: Automate infrastructure
+                                    provisioning,
+                                    application deployment, and scaling.</li>
+                                <li style="margin-bottom: 10px;"><b>Monitoring and Logging</b>: Implement monitoring and
+                                    logging solutions with AWS CloudWatch and CloudTrail.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <!-- Card 2: Infrastructure Design and Implementation -->
-                <div class="col-md-4 mb-4 d-flex">
-                    <div class="rectangle animate__animated animate__fadeInLeft">
-                        <div class="rectangle-top"></div>
-                        <img src="assets/img/aws_solution_architects/infrastructure_design.jpg"
-                            alt="Infrastructure Design and Implementation" class="rectangle-image"
-                            style="height: 150px">
-                        <h5 class="rectangle-title">Infrastructure Design and Implementation</h5>
-                        <ul style="padding-left: 20px;" class="about-text">
-                            <li style="margin-bottom: 10px;"><b>Architecture Design</b>: Create robust, scalable, and
-                                secure AWS architectures tailored to your needs.</li>
-                            <li style="margin-bottom: 10px;"><b>Implementation</b>: Deploy and configure AWS services
-                                for a reliable cloud infrastructure.</li>
-                            <li style="margin-bottom: 10px;"><b>Infrastructure as Code (IaC)</b>: Automate
-                                infrastructure deployment with AWS CloudFormation and Terraform.</li>
-                        </ul>
+                <div class="row equal-margin">
+                    <!-- Card 4: Cloud Data Management and Analytics-->
+                    <div class="col-md-6 mb-4 d-flex">
+                        <div class="rectangle animate__animated animate__fadeInLeft">
+                            <div class="rectangle-top"></div>
+                            <img src="assets/img/aws_solution_architects/data_management.jpg"
+                                alt="Cloud Data Management and Analytics" class="rectangle-image"
+                                style="height: 270px;">
+                            <h5 class="rectangle-title">Cloud Data Management and Analytics</h5>
+                            <ul style="padding-left: 20px;" class="about-text">
+                                <li style="margin-bottom: 10px;"><b>Data Warehousing</b>: Design and implement data
+                                    warehousing solutions to store and analyze large volumes of data.</li>
+                                <li style="margin-bottom: 10px;"><b>Big Data and Analytics</b>: Utilize cloud-based
+                                    analytics tools and services to gain insights from your data.</li>
+                                <li style="margin-bottom: 10px;"><b>Database Management</b>: Manage and optimize cloud
+                                    databases for performance, reliability, and scalability.</li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <!-- Card 3: DevOps on AWS -->
-                <div class="col-md-4 mb-4 d-flex">
-                    <div class="rectangle animate__animated animate__fadeInRight">
-                        <div class="rectangle-top"></div>
-                        <img src="assets/img/aws_solution_architects/aws.jpg" alt="DevSecOps on AWS"
-                            class="rectangle-image" style="height: 150px">
-                        <h5 class="rectangle-title" style="margin-bottom: 45px;">DevSecOps on AWS</h5>
-                        <ul style="padding-left: 20px;" class="about-text">
-                            <li style="margin-bottom: 10px;"><b>CI/CD Pipelines</b>: Set up secure continuous
-                                integration and
-                                deployment pipelines with AWS CodePipeline.</li>
-                            <li style="margin-bottom: 10px;"><b>Automation</b>: Automate infrastructure provisioning, 
-                                application deployment, and scaling.</li>
-                            <li style="margin-bottom: 10px;"><b>Monitoring and Logging</b>: Implement monitoring and
-                                logging solutions with AWS CloudWatch and CloudTrail.</li>
-                        </ul>
+                    <!-- Card 5: Cloud Disaster Recovery and Backup-->
+                    <div class="col-md-6 mb-4  d-flex">
+                        <div class="rectangle animate__animated animate__fadeInLeft">
+                            <div class="rectangle-top"></div>
+                            <img src="assets/img/aws_solution_architects/backup.jpg"
+                                alt="Cloud Disaster Recovery and Backup" class="rectangle-image" style="height: 270px;">
+                            <h5 class="rectangle-title">Cloud Disaster Recovery and Backup</h5>
+                            <ul style="padding-left: 20px;" class="about-text">
+                                <li style="margin-bottom: 10px;"><b>Disaster Recovery Planning</b>: Develop
+                                    comprehensive
+                                    disaster recovery plans tailored to your business needs, ensuring minimal downtime
+                                    and
+                                    data loss in the event of a disaster.</li>
+                                <li style="margin-bottom: 10px;"><b>Automated Backup Solutions</b>: Implement automated
+                                    backup solutions to regularly and securely back up your data, ensuring its integrity
+                                    and
+                                    availability.</li>
+                                <li style="margin-bottom: 10px;"><b>Reliable Restore Processes</b>: Establish reliable
+                                    restore processes to quickly and efficiently recover your data and restore
+                                    operations to
+                                    normalcy in the event of a disaster or data loss.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row equal-margin">
-                <!-- Card 4: Cloud Data Management and Analytics-->
-                <div class="col-md-6 mb-4 d-flex">
-                    <div class="rectangle animate__animated animate__fadeInLeft">
-                        <div class="rectangle-top"></div>
-                        <img src="assets/img/aws_solution_architects/data_management.jpg"
-                            alt="Cloud Data Management and Analytics" class="rectangle-image" style="height: 270px;">
-                        <h5 class="rectangle-title">Cloud Data Management and Analytics</h5>
-                        <ul style="padding-left: 20px;" class="about-text">
-                            <li style="margin-bottom: 10px;"><b>Data Warehousing</b>: Design and implement data
-                                warehousing solutions to store and analyze large volumes of data.</li>
-                            <li style="margin-bottom: 10px;"><b>Big Data and Analytics</b>: Utilize cloud-based
-                                analytics tools and services to gain insights from your data.</li>
-                            <li style="margin-bottom: 10px;"><b>Database Management</b>: Manage and optimize cloud
-                                databases for performance, reliability, and scalability.</li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Card 5: Cloud Disaster Recovery and Backup-->
-                <div class="col-md-6 mb-4  d-flex">
-                    <div class="rectangle animate__animated animate__fadeInLeft">
-                        <div class="rectangle-top"></div>
-                        <img src="assets/img/aws_solution_architects/backup.jpg"
-                            alt="Cloud Disaster Recovery and Backup" class="rectangle-image" style="height: 270px;">
-                        <h5 class="rectangle-title">Cloud Disaster Recovery and Backup</h5>
-                        <ul style="padding-left: 20px;" class="about-text">
-                            <li style="margin-bottom: 10px;"><b>Disaster Recovery Planning</b>: Develop comprehensive
-                                disaster recovery plans tailored to your business needs, ensuring minimal downtime and
-                                data loss in the event of a disaster.</li>
-                            <li style="margin-bottom: 10px;"><b>Automated Backup Solutions</b>: Implement automated
-                                backup solutions to regularly and securely back up your data, ensuring its integrity and
-                                availability.</li>
-                            <li style="margin-bottom: 10px;"><b>Reliable Restore Processes</b>: Establish reliable
-                                restore processes to quickly and efficiently recover your data and restore operations to
-                                normalcy in the event of a disaster or data loss.</li>
-                        </ul>
-                    </div>
-                </div>
             </div>
-        </div>
-        </div>
+        </section>
     </main>
     <!-- ======= Footer ======= -->
     <footer id="footer">
