--- a/mission.html
+++ b/mission.html
@@ -102,38 +102,41 @@
     </header><!-- End Header -->
 
     <main id="main">
-        <div class="container" style="margin-top: 120px;">
+        <section id="mission">
+            <div class="container" style="margin-top: 120px;">
 
-            <div class="row">
-                <div class="col-lg-6 animate__animated animate__fadeInLeft">
-                    <img src="assets/img/about/mission.jpg" alt="Mission" class="img-fluid rounded"
-                        style="height: 440px; width: 100%;">
+                <div class="row">
+                    <div class="col-lg-6 animate__animated animate__fadeInLeft">
+                        <img src="assets/img/about/mission.jpg" alt="Mission" class="img-fluid rounded"
+                            style="height: 440px; width: 100%;">
+                    </div>
+                    <div class="col-lg-6 animate__animated animate__fadeInRight mt-4 mt-lg-0 about-text-container">
+                        <h1 class="mission-heading">Our Mission</h1>
+                        <p class="about-text">Our mission is to empower businesses by enhancing efficiency through
+                            innovative products and services. We are committed to continuous innovation, integrity,
+                            availability, and reliability.</p>
+                        <ul style="list-style: none; padding-left: 0;" class="about-text">
+                            <p class="about-text">We specialize in:</p>
+                            <li><i class="bi bi-laptop-fill" style="color:#0C356A;"></i>&nbsp;Software Development</li>
+                            <li><i class="bi bi-cloud-check-fill" style="color:#0C356A;"></i>&nbsp;Cloud Management
+                                Services</li>
+                            <li><i class="bi bi-hand-thumbs-up-fill" style="color:#0C356A;"></i>&nbsp;Quality Assurance
+                            </li>
+                            <li><i class="bi bi-file-lock-fill" style="color:#0C356A;"></i>&nbsp;Test Automation</li>
+                        </ul>
+                        <p style="margin-top: 20px;" class="about-text">Our skilled consultants ensures seamless
+                            user experiences and reliable applications, consistently delivering high-quality solutions
+                            that
+                            enable our clients to achieve their goals and stay competitive.
+                        </p>
+                    </div>
                 </div>
-                <div class="col-lg-6 animate__animated animate__fadeInRight mt-4 mt-lg-0 about-text-container">
-                    <h1 class="mission-heading">Our Mission</h1>
-                    <p class="about-text">Our mission is to empower businesses by enhancing efficiency through
-                        innovative products and services. We are committed to continuous innovation, integrity,
-                        availability, and reliability.</p>
-                    <ul style="list-style: none; padding-left: 0;" class="about-text">
-                        <p class="about-text">We specialize in:</p>
-                        <li><i class="bi bi-laptop-fill" style="color:#0C356A;"></i>&nbsp;Software Development</li>
-                        <li><i class="bi bi-cloud-check-fill" style="color:#0C356A;"></i>&nbsp;Cloud Management
-                            Services</li>
-                        <li><i class="bi bi-hand-thumbs-up-fill" style="color:#0C356A;"></i>&nbsp;Quality Assurance
-                        </li>
-                        <li><i class="bi bi-file-lock-fill" style="color:#0C356A;"></i>&nbsp;Test Automation</li>
-                    </ul>
-                    <p style="margin-top: 20px;" class="about-text">Our skilled consultants ensures seamless
-                        user experiences and reliable applications, consistently delivering high-quality solutions that
-                        enable our clients to achieve their goals and stay competitive.
-                    </p>
-                </div>
+
+                <!-- Responsive Margin Bottom for 1150px Width -->
+                <div class="d-none d-lg-block responsive-margin-xl"></div>
+
             </div>
-
-            <!-- Responsive Margin Bottom for 1150px Width -->
-            <div class="d-none d-lg-block responsive-margin-xl"></div>
-
-        </div>
+        </section>
     </main><!-- End #main -->
 
     <!-- ======= Footer ======= -->
