--- a/recruitment.html
+++ b/recruitment.html
@@ -177,121 +177,139 @@
         </div>
     </header><!-- End Header -->
     <main id="main">
-        <div class="container" style="margin-top: 120px;">
-            <div class="row align-items-start mb-4">
-                <div class="col-lg-6">
-                    <div class="col-lg-12">
-                        <h1 class="animate__animated animate__fadeInLeft mt-lg-n5 mt-sm-0 d-lg-flex d-sm-block"
-                            style="margin-bottom: 20px; color: #007bff; font-weight: 800;">
-                            Recruitment Services
-                        </h1>
+        <section id="recuritment">
+            <div class="container" style="margin-top: 120px;">
+                <div class="row align-items-start mb-4">
+                    <div class="col-lg-6">
+                        <div class="col-lg-12">
+                            <h1 class="animate__animated animate__fadeInLeft mt-lg-n5 mt-sm-0 d-lg-flex d-sm-block"
+                                style="margin-bottom: 20px; color: #007bff; font-weight: 800;">
+                                Recruitment Services
+                            </h1>
+                        </div>
+                        <div class="content animate__animated animate__fadeInLeft">
+                            <p class="about-text">We excel at finding the right candidates at the right price for the
+                                right
+                                positions. Trust us as your premier talent-sourcing partner to deliver precisely what
+                                your
+                                company needs. Our recruitment division offers both contingency and retainer talent
+                                sourcing
+                                across various levels, specializing in IT and financial services.</p>
+                            <p class="about-text">We collaborate with you to meticulously select each strategic new
+                                hire,
+                                understanding that every professional impacts your business's bottom line.<br>
+                                Our precise recruitment process consistently meets client needs with just a few and
+                                often just one,
+                                candidate.</p>
+                            <p class="about-text">We address key recruitment challenges, including:</p>
+                            <ul style="padding-left: 30px;" class="about-text">
+                                <li>Talent shortages</li>
+                                <li>Attracting the right
+                                    candidates</li>
+                                <li>Engaging with
+                                    qualified candidates
+                                </li>
+                                <li>Reducing time-to-hire
+                                </li>
+                                <li>Creating efficient
+                                    recruiting processes</li>
+                                <li>Ensuring a positive
+                                    candidate experience</li>
+                            </ul>
+                            <!-- <p class="about-text">Why choose us? Here's why:</p> -->
+                        </div>
                     </div>
-                    <div class="content animate__animated animate__fadeInLeft">
-                        <p class="about-text">We excel at finding the right candidates at the right price for the right
-                            positions. Trust us as your premier talent-sourcing partner to deliver precisely what your
-                            company needs. Our recruitment division offers both contingency and retainer talent sourcing
-                            across various levels, specializing in IT and financial services.</p>
-                        <p class="about-text">We collaborate with you to meticulously select each strategic new hire, 
-                            understanding that every professional impacts your business's bottom line.<br>
-                            Our precise recruitment process consistently meets client needs with just a few and often just one,
-                            candidate.</p>
-                        <p class="about-text">We address key recruitment challenges, including:</p>
-                        <ul style="padding-left: 30px;" class="about-text">
-                            <li>Talent shortages</li>
-                            <li>Attracting the right
-                                candidates</li>
-                            <li>Engaging with
-                                qualified candidates
-                            </li>
-                            <li>Reducing time-to-hire
-                            </li>
-                            <li>Creating efficient
-                                recruiting processes</li>
-                            <li>Ensuring a positive
-                                candidate experience</li>
-                        </ul>
-                        <!-- <p class="about-text">Why choose us? Here's why:</p> -->
+                    <div class="col-lg-6">
+                        <div class="animate__animated animate__fadeInRight text-center">
+                            <img src="assets/img/recuritment/recruitment-consulting-venn-diagram.jpg" alt="Recruitment"
+                                class="img-fluid"
+                                style="width: 100%; max-width: 160%; height: 582px; border-radius: 8px;">
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="animate__animated animate__fadeInRight text-center">
-                        <img src="assets/img/recuritment/recruitment-consulting-venn-diagram.jpg" alt="Recruitment"
-                            class="img-fluid" style="width: 100%; max-width: 160%; height: 582px; border-radius: 8px;">
-                    </div>
-                </div>
-            </div>
 
-            <div class="row equal-margin">
-                <!-- Card 1:Our Network:-->
-                <div class="col-md-6 mb-4">
-                    <div class="rectangle animate__animated animate__fadeInLeft">
-                        <div class="rectangle-top"></div>
-                        <h5 class="rectangle-title">Our Network</h5>
-                        <ul style="padding-left: 20px;" class="about-text">
-                            <li style="margin-bottom: 10px;">Strong relationships with top employers and skilled tech
-                                professionals.</li>
-                            <li style="margin-bottom: 10px;">Expansive network utilized to deliver the best matches to
-                                premier IT recruitment firms and startup agencies across India.</li>
-                            <li style="margin-bottom: 10px;">Focus on ensuring optimal talent acquisition tailored to
-                                your business needs.</li>
-                        </ul>
+                <div class="row equal-margin">
+                    <!-- Card 1:Our Network:-->
+                    <div class="col-md-6 mb-4">
+                        <div class="rectangle animate__animated animate__fadeInLeft">
+                            <div class="rectangle-top"></div>
+                            <h5 class="rectangle-title">Our Network</h5>
+                            <ul style="padding-left: 20px;" class="about-text">
+                                <li style="margin-bottom: 10px;">Strong relationships with top employers and skilled
+                                    tech
+                                    professionals.</li>
+                                <li style="margin-bottom: 10px;">Expansive network utilized to deliver the best matches
+                                    to
+                                    premier IT recruitment firms and startup agencies across India.</li>
+                                <li style="margin-bottom: 10px;">Focus on ensuring optimal talent acquisition tailored
+                                    to
+                                    your business needs.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- Card 2: Technology Expertise -->
+                    <div class="col-md-6 mb-4">
+                        <div class="rectangle animate__animated animate__fadeInRight">
+                            <div class="rectangle-top"></div>
+                            <h5 class="rectangle-title">Technology Expertise
+                            </h5>
+                            <ul style="padding-left: 20px;" class="about-text">
+                                <li style="margin-bottom: 10px;">Stay updated on the latest technological trends to
+                                    enhance
+                                    recruitment strategies.</li>
+                                <li style="margin-bottom: 10px;">Specialize in matching companies with candidates who
+                                    closely align with and meet specific job requirements.</li>
+                                <li class="margin-bottom: 10px;">Focus on delivering high-quality, customized
+                                    recruitment
+                                    solutions that align with and support client objectives effectively.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <!-- Card 2: Technology Expertise -->
-                <div class="col-md-6 mb-4">
-                    <div class="rectangle animate__animated animate__fadeInRight">
-                        <div class="rectangle-top"></div>
-                        <h5 class="rectangle-title">Technology Expertise
-                        </h5>
-                        <ul style="padding-left: 20px;" class="about-text">
-                            <li style="margin-bottom: 10px;">Stay updated on the latest technological trends to enhance
-                                recruitment strategies.</li>
-                            <li style="margin-bottom: 10px;">Specialize in matching companies with candidates who
-                                closely align with and meet specific job requirements.</li>
-                            <li class="margin-bottom: 10px;">Focus on delivering high-quality, customized recruitment
-                                solutions that align with and support client objectives effectively.</li>
-                        </ul>
+                <div class="row equal-margin">
+                    <!-- Card 3: Commitment and Quality-->
+                    <div class="col-md-6 mb-4">
+                        <div class="rectangle animate__animated animate__fadeInLeft">
+                            <div class="rectangle-top"></div>
+                            <h5 class="rectangle-title">Commitment and Quality</h5>
+                            <ul style="padding-left: 20px;" class="about-text">
+                                <li style="margin-bottom: 10px;">Unwavering commitment to delivering exceptional quality
+                                    in
+                                    recruitment services.
+                                </li>
+                                <li style="margin-bottom: 10px;">Comprehensive candidate research beyond resumes to
+                                    gather
+                                    relevant details.
+                                </li>
+                                <li style="margin-bottom: 10px;">Focus on finding the best-fit candidates that align
+                                    with
+                                    your company's specific needs and culture.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- Card 4: Good-Quality Candidates:-->
+                    <div class="col-md-6 mb-4">
+                        <div class="rectangle animate__animated animate__fadeInRight">
+                            <div class="rectangle-top"></div>
+                            <h5 class="rectangle-title">Good-Quality Candidates</h5>
+                            <ul style="padding-left: 20px;" class="about-text">
+                                <li style="margin-bottom: 10px;">Access to a vast talent pool of top-tier candidates
+                                    within
+                                    India.
+                                </li>
+                                <li style="margin-bottom: 10px;">Utilization of a network of pre-screened and referenced
+                                    professionals.
+                                </li>
+                                <li class="margin-bottom: 10px">Focus on delivering highly qualified and thoroughly
+                                    vetted
+                                    candidates to streamline your hiring process effectively.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row equal-margin">
-                <!-- Card 3: Commitment and Quality-->
-                <div class="col-md-6 mb-4">
-                    <div class="rectangle animate__animated animate__fadeInLeft">
-                        <div class="rectangle-top"></div>
-                        <h5 class="rectangle-title">Commitment and Quality</h5>
-                        <ul style="padding-left: 20px;" class="about-text">
-                            <li style="margin-bottom: 10px;">Unwavering commitment to delivering exceptional quality in
-                                recruitment services.
-                            </li>
-                            <li style="margin-bottom: 10px;">Comprehensive candidate research beyond resumes to gather
-                                relevant details.
-                            </li>
-                            <li style="margin-bottom: 10px;">Focus on finding the best-fit candidates that align with
-                                your company's specific needs and culture.</li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Card 4: Good-Quality Candidates:-->
-                <div class="col-md-6 mb-4">
-                    <div class="rectangle animate__animated animate__fadeInRight">
-                        <div class="rectangle-top"></div>
-                        <h5 class="rectangle-title">Good-Quality Candidates</h5>
-                        <ul style="padding-left: 20px;" class="about-text">
-                            <li style="margin-bottom: 10px;">Access to a vast talent pool of top-tier candidates within
-                                India.
-                            </li>
-                            <li style="margin-bottom: 10px;">Utilization of a network of pre-screened and referenced
-                                professionals.
-                            </li>
-                            <li class="margin-bottom: 10px">Focus on delivering highly qualified and thoroughly vetted
-                                candidates to streamline your hiring process effectively.</li>
-                        </ul>
-                    </div>
-                </div>
             </div>
-        </div>
-        </div>
+        </section>
     </main>
     <!-- ======= Footer ======= -->
     <footer id="footer">
