--- a/enterprise-app-dev.html
+++ b/enterprise-app-dev.html
@@ -147,6 +147,7 @@
     </div>
   </header><!-- End Header -->
   <main id="main">
+    <section id="enterprise-app-dev">
     <div class="container" style="margin-top: 120px;">
       <div class="row align-items-start mb-4">
         <div class="col-lg-6">
@@ -289,6 +290,7 @@
       </div>
     </div>
     </div>
+  </section>
   </main>
 
   <!-- ======= Footer ======= -->
